omap3-pandora.conf: Update machine config to pull in firmware and init scripts.

--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -7,19 +7,6 @@ TARGET_ARCH = "arm"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-omap3pandora"
 
-PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
-
-XSERVER = " \
-	xserver-xorg \
-	xserver-xorg-extension-glx \
-	xserver-xorg-extension-dri \
-	xf86-input-tslib \
-	xf86-input-evdev \
-	xf86-input-mouse \
-	xf86-input-keyboard \
-	xf86-video-omapfb \
-"
-
 #800 * 480 Widescreen
 GUI_MACHINE_CLASS = "bigscreen"
 MACHINE_GUI_CLASS = "bigscreen"
@@ -38,6 +25,19 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
 MACHINE_KERNEL_PR = "r3"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-omap3pandora"
+
+PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
+
+XSERVER = " \
+	xserver-xorg \
+	xserver-xorg-extension-glx \
+	xserver-xorg-extension-dri \
+	xf86-input-tslib \
+	xf86-input-evdev \
+	xf86-input-mouse \
+	xf86-input-keyboard \
+	xf86-video-omapfb \
+"
 
 # Use our 'Powered by Angstrom' splash for the images.
 PREFERRED_PROVIDER_virtual/psplash = "psplash-omap3pandora"
@@ -68,3 +68,8 @@ PREFERRED_PROVIDER_x-load = "x-load-omap3pandora"
 EXTRA_IMAGEDEPENDS += "virtual/bootloader x-load"
 
 MACHINE_FEATURES = "kernel26 apm usbgadget usbhost keyboard vfat ext2 screen touchscreen alsa bluetooth wifi sdio"
+
+MACHINE_EXTRA_RRECOMMENDS += " \
+	openpandora-firmware \
+	wl1251-init \
+"
