--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -13,8 +13,8 @@ MACHINE_GUI_CLASS = "bigscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "800"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "480"
 
-#IMAGE_FSTYPES += "tar.bz2 ubi"
-IMAGE_FSTYPES = "tar.bz2"
+IMAGE_FSTYPES += "tar.bz2 ubi"
+#IMAGE_FSTYPES = "tar.bz2"
 
 SERIAL_CONSOLE = "115200 ttyS0"
 
@@ -23,8 +23,6 @@ require conf/machine/include/omap3.inc
 # Put it below omap3.inc as we override the kernel and PR here
 PREFERRED_PROVIDER_virtual/kernel = "linux-${MACHINE}"
 MACHINE_KERNEL_PR = "r3"
-
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-omap3pandora"
 
 PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
 
