layer.conf: Clean up layer file and set BBFILE_PRIORITY to 6.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -1,9 +1,10 @@
-# We have a conf directory, append to BBPATH
+# We have a conf and classes directory, append to BBPATH
 BBPATH .= ":${LAYERDIR}"
 
-# We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
+# We have a recipes directory containing .bb and .bbappend files, add to BBFILES
+BBFILES := "${BBFILES} ${LAYERDIR}/recipes*/*/*.bb \ 
+            ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "openpandora-layer"
-BBFILE_PATTERN_openpandora-layer := "^${LAYERDIR}/"
-BBFILE_PRIORITY_openpandora-layer = "7"
+BBFILE_COLLECTIONS += "openpandora"
+BBFILE_PATTERN_openpandora := "^${LAYERDIR}/"
+BBFILE_PRIORITY_openpandora = "6"
