--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -9,7 +9,6 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-omap3pandora"
 
 #800 * 480 Widescreen
 GUI_MACHINE_CLASS = "bigscreen"
-MACHINE_GUI_CLASS = "bigscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "800"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "480"
 
@@ -28,12 +27,10 @@ PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
 
 XSERVER = " \
 	xserver-xorg \
-	xserver-xorg-extension-glx \
-	xserver-xorg-extension-dri \
-	xf86-input-tslib \
 	xf86-input-evdev \
 	xf86-input-mouse \
 	xf86-input-keyboard \
+	xf86-video-fbdev \
 	xf86-video-omapfb \
 "
 
@@ -67,7 +64,15 @@ EXTRA_IMAGEDEPENDS += "virtual/bootloader x-load"
 
 MACHINE_FEATURES = "kernel26 apm usbgadget usbhost keyboard vfat ext2 screen touchscreen alsa bluetooth wifi sdio"
 
+# OpenGLES recipes need meta-texasinstruments as a layer.
+
+OPENGLES = " \
+  omap3-sgx-modules devmem2 \
+  libgles-omap3 \
+"
+
 MACHINE_EXTRA_RRECOMMENDS += " \
 	openpandora-firmware \
 	wl1251-init \
+	${OPENGLES} \
 "
