--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -30,6 +30,7 @@ XSERVER = " \
 	xf86-input-evdev \
 	xf86-input-mouse \
 	xf86-input-keyboard \
+	xf86-input-tslib \
 	xf86-video-fbdev \
 	xf86-video-omapfb \
 "
