omap3-pandora.conf: PREFERRED_VERSION_omap3-sgx-modules set to working version

--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -64,6 +64,8 @@ MACHINE_FEATURES = "kernel26 apm usbgadget usbhost keyboard vfat ext2 screen tou
 
 # OpenGLES recipes need meta-texasinstruments as a layer.
 
+PREFERRED_VERSION_omap3-sgx-modules = "1.6.16.3977"
+
 OPENGLES = " \
   omap3-sgx-modules devmem2 \
   libgles-omap3 \
