--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -65,6 +65,7 @@ MACHINE_FEATURES = "kernel26 apm usbgadget usbhost keyboard vfat ext2 screen tou
 # OpenGLES recipes need meta-texasinstruments as a layer.
 
 PREFERRED_VERSION_omap3-sgx-modules = "4.00.00.01"
+PREFERRED_VERSION_libgles-omap3 = "4.00.00.01"
 
 OPENGLES = " \
   omap3-sgx-modules devmem2 \
