omap3-pandora.conf: set PREFERRED_PROVIDER_virtual/libsdl to libsdl-omap (needs change to angstrom-core-tweaks.inc to actually work)

--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -62,6 +62,8 @@ EXTRA_IMAGEDEPENDS += "virtual/bootloader x-load"
 
 MACHINE_FEATURES = "kernel26 apm usbgadget usbhost keyboard vfat ext2 screen touchscreen alsa bluetooth wifi sdio"
 
+PREFERRED_PROVIDER_virtual/libsdl = "libsdl-omap"
+
 # OpenGLES recipes need meta-texasinstruments as a layer.
 
 PREFERRED_VERSION_omap3-sgx-modules = "4.00.00.01"
