omap3-pandora.conf: disabled libsdl-omap again, caused problems compiling other sdl packages

--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -62,7 +62,7 @@ EXTRA_IMAGEDEPENDS += "virtual/bootloader x-load"
 
 MACHINE_FEATURES = "kernel26 apm usbgadget usbhost keyboard vfat ext2 screen touchscreen alsa bluetooth wifi sdio"
 
-PREFERRED_PROVIDER_virtual/libsdl = "libsdl-omap"
+#PREFERRED_PROVIDER_virtual/libsdl = "libsdl-omap"
 
 # OpenGLES recipes need meta-texasinstruments as a layer.
 
