omap3-pandora.conf: disabled ubi image, saves a bit of time, and no one will want to run this from nand atm

--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -12,8 +12,8 @@ GUI_MACHINE_CLASS = "bigscreen"
 MACHINE_DISPLAY_WIDTH_PIXELS = "800"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "480"
 
-IMAGE_FSTYPES += "tar.bz2 ubi"
-#IMAGE_FSTYPES = "tar.bz2"
+#IMAGE_FSTYPES += "tar.bz2 ubi"
+IMAGE_FSTYPES = "tar.bz2"
 
 SERIAL_CONSOLE = "115200 ttyS0"
 
