omap3-pandora.conf: set PREFERRED_PROVIDER for uboot and psplash

--- a/conf/machine/omap3-pandora.conf
+++ b/conf/machine/omap3-pandora.conf
@@ -5,7 +5,10 @@
 
 TARGET_ARCH = "arm"
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-omap3pandora"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
+
+PREFERRED_PROVIDER_virtual/psplash = "psplash-openpandora"
+PREFERRED_PROVIDER_virtual/psplash-support = "psplash-openpandora"
 
 #800 * 480 Widescreen
 GUI_MACHINE_CLASS = "bigscreen"
