--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,9 +2,9 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have a recipes directory containing .bb and .bbappend files, add to BBFILES
-BBFILES := "${BBFILES} ${LAYERDIR}/recipes*/*/*.bb \ 
+BBFILES += "${LAYERDIR}/recipes*/*/*.bb \ 
             ${LAYERDIR}/recipes*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "openpandora"
-BBFILE_PATTERN_openpandora := "^${LAYERDIR}/"
+BBFILE_PATTERN_openpandora = "^${LAYERDIR}/"
 BBFILE_PRIORITY_openpandora = "6"
