--- a/conf/machine/openpandora.conf
+++ b/conf/machine/openpandora.conf
@@ -16,7 +16,7 @@ XSERVER = "xserver-xorg \
 
 MACHINE_FEATURES = "kernel26 apm usbgadget usbhost keyboard vfat ext2 screen touchscreen alsa bluetooth wifi sdio"
 
-PREFERRED_PROVIDER_virtual/kernel = "linux-omap3-pandora"
+PREFERRED_PROVIDER_virtual/kernel = "linux-openpandora"
 MACHINE_EXTRA_RRECOMMENDS = "kernel-modules openpandora-firmware openpandora-u-boot-autoboot-sd"
 
 PREFERRED_PROVIDER_x-load = "x-load-openpandora"
