Fixed multiple .bb files provide virtual/mesa, virtual/libgl, virtual/egl

--- a/conf/machine/openpandora.conf
+++ b/conf/machine/openpandora.conf
@@ -20,5 +20,8 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-openpandora"
 MACHINE_EXTRA_RRECOMMENDS = "kernel-modules openpandora-firmware openpandora-u-boot-autoboot-sd"
 
 PREFERRED_PROVIDER_x-load = "x-load-openpandora"
+PREFERRED_PROVIDER_virtual/mesa = "mesa-gl"
+PREFERRED_PROVIDER_virtual/libgl = "mesa-gl"
+PREFERRED_PROVIDER_virtual/egl = "libgles-omap3"
 PREFERRED_VERSION_libgles-omap3 = "4.00.00.01"
 PREFERRED_VERSION_omap3-sgx-modules = "4.00.00.01"
