openpandora.conf: oe now defaults to hardfp, set tune to softfp to make old sgx drivers work

--- a/conf/machine/openpandora.conf
+++ b/conf/machine/openpandora.conf
@@ -3,6 +3,7 @@
 #@DESCRIPTION: Machine configuration for the Pandora http://www.openpandora.org/ Handheld Console
 #@MAINTAINER: John Willis
 
+DEFAULTTUNE_openpandora="armv7a-neon"
 require conf/machine/include/omap3.inc
 
 PREFERRED_PROVIDER_virtual/xserver = "xserver-xorg"
